Correctly align the GitHub mark in nav

--- a/css/default.css
+++ b/css/default.css
@@ -81,6 +81,7 @@ a:hover {
 
 #nav-github-mark {
   height: 1em;
+  vertical-align: middle;
 }
 
 #page-content {
